# cpp-cider

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
api-doc/: index.html
docs/: README.md  index.html
examples/: CMakeLists.txt  do_not_wait.cpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  minimal_cider.cpp
